@@ -1062,6 +1062,14 @@ define this as META-INF/Customer-weblogic-cmp-rdbms-jar.xml.</p>
                      </td>
     <td valign="top" align="center">No.</td>
   </tr>
+  <tr>
+    <td valign="top">outputdir</td>
+    <td valign="top">If set ejbc will be given this directory as the output
+                     desitination rather than a jar file. This allows for the
+                     generation of &quot;exploded&quot; jars.
+                     </td>
+    <td valign="top" align="center">No.</td>
+  </tr>
 </table>
 
 <p>The weblogic nested element supports three nested elements. The
